# resampy

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  codecov.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-minimal.yml  ci.yml  lint_python.yml  publish.yml
docs/: Makefile  api.rst  changes.rst  conf.py  example.rst  index.rst
paper/: codemeta.json  paper.bib  paper.md
resample/: __init__.py  core.py  resample.pyx  setup.py
resampy/: core.py  filters.py  interp.pyx  interpn.py  resample.pyx  setup.py  version.py
resampy/__check_build/: __init__.py
resampy/data/: kaiser_best.npz  kaiser_fast.npz
scripts/: create_filter.py
tests/: test_core.py  test_filters.py  test_quality.py
