[tool:pytest]
addopts = --cov-report term-missing --cov resampy --cov-report=xml
xfail_strict = true

[pycodestyle]
max-line-length=119
ignore = E203,W503


[metadata]
name = resampy
author = Brian McFee
author_email = brian.mcfee@nyu.edu
version = attr: resampy.version.version
url = https://github.com/bmcfee/resampy
download_url = https://github.com/bmcfee/resampy/releases
description = Efficient signal resampling
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = ISC
license_file = LICENSE.md
license_file_content_type = text/markdown; charset=UTF-8
classifiers =
    License :: OSI Approved :: ISC License (ISCL)
    Programming Language :: Python
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_package_data = True
python_requires >= 3.6
install_requires =
    numpy>=1.17
    numba>=0.41

[options.package_data]
resampy = data/*

[options.extras_require]
docs = 
    numpydoc
    sphinx!=1.3.1

tests =
    pytest < 8
    pytest-cov
    scipy>=1.0
